fix: scrollbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,21 @@
     font-weight: normal;
     font-style: normal;
 }
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: theme('colors.gray.300') theme('colors.white');
+}
+
+*::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+    @apply rounded-lg bg-gray-300;
+}
+
+*::-webkit-scrollbar-track {
+    @apply bg-white;
+}
